Archive2/e0/f31b9be9c0a100/output
main.cpp: In function 'int main()':
main.cpp:109:32: error: invalid initialization of reference of type 'const Ptr<int, NoChecking>&' from expression of type 'Ptr<int, NotNull>'
   test_noChecking ( notNullPtr );    //should be ERROR - NotNull is explicitly convertible to NoChecking
                                ^
main.cpp:97:6: note: in passing argument 1 of 'void test_noChecking(const Ptr<int, NoChecking>&)'
 void test_noChecking( const Ptr< int, NoChecking >& )
      ^
